lib/Dllama.h

// Dllama DLL
#define DLLAMA_DLL "Dllama.dll"
/**
 * Run inference on currenly loaded LLM in simple way.
 *
 * \param AModelPath          - path to model files
 * \param AModelsDb           - model database filename
 * \param AModelName          - model reference name
 * \param AUseGPU             - TRUE to use GPU, FALSE to use CPU
 * \param AMaxTokens          - max tokens for inference
 * \param ACancelInferenceKey - key to break out of inference
 * \param AQuestion           - question to ask LLM
 * \returns response from LLM
 **/
DLLAMA_API char * Dllama_Simple_Inference(const char * AModelPath,
  const char * AModelsDb, const char * AModelName, const bool AUseGPU,
  const uint32_t AMaxTokens, const unsigned char ACancelInferenceKey,
  const char * AQuestion);
/**
 * Check if LLM inference is in progress.
 *
 * \returns TRUE of inference is active, FALSE if not.
 **/
DLLAMA_API bool Dllama_IsInferenceActive();
/**
 * Get size of console window
 *
 * \param AWidth  - returns the width of console window
 * \param AHeight - return height of console window
 **/
DLLAMA_API void Dllama_Console_GetSize(int* AWidth, int* AHeight);
/**
 * Clear the console window.
 **/
DLLAMA_API void Dllama_Console_Clear();
/**
 * Clear current line of console window.
 *
 * \param AColor - color to clear current console line to
 **/
DLLAMA_API void Dllama_Console_ClearLine(unsigned short AColor);
/**
 * Set title of console window.
 *
 * \param ATitle - string to set console title
 **/
DLLAMA_API void Dllama_Console_SetTitle(const char * ATitle);
/**
 * Display an optional message and wait in console window and wait for a
 * keypress.
 *
 * \param AForcePause - set TRUE to always pause, FALSE to skip pause if
 *                      running on commandline
 * \param AColor      - color to display message text in
 * \param AMsg        - message to display, if empty, display default message
 **/
DLLAMA_API void Dllama_Console_Pause(bool AForcePause, unsigned short AColor,
  const char * aMsg);
/**
 * Print a message in console window.
 *
 * \param AText  - print text at current line in console
 * \param AColor - the color to print text in
 **/
DLLAMA_API void Dllama_Console_Print(const char * AText, unsigned short AColor);
/**
 * Print a message in console window with linefeed.
 *
 * \param AText  - print text at current line in console
 * \param AColor - the color to print text in
 **/
DLLAMA_API void Dllama_Console_PrintLn(const char * AText, unsigned short AColor);
/**
 * Set the right margin of console window when streaming tokens during LLM
 * inference.
 *
 * \param AMargin - margin value
 **/
DLLAMA_API void Dllama_TokenResponse_SetRightMargin(int AMargin);
/**
 * Add a new token to token response buffer.
 *
 * \param AToken return a token response action
 **/
DLLAMA_API int  Dllama_TokenResponse_AddToken(const char * AToken);
/**
 * The current word to print from token response buffer.
 *
 * \returns wrapped text to display when streaming
 **/
DLLAMA_API char* Dllama_TokenResponse_LastWord();
/**
 * Check if there are pending text in the token response buffer.
 *
 * \returns TRUE if there is more text to display, FALSE if not.
 **/
DLLAMA_API bool  Dllama_TokenResponse_Finalize();