lib/Dllama.pas


(**
 * Run inference on currenly loaded LLM in simple way.
 *
 * \param AModelPath          - path to model files
 * \param AModelsDb           - model database filename
 * \param AModelName          - model reference name
 * \param AUseGPU             - TRUE to use GPU, FALSE to use CPU
 * \param AMaxTokens          - max tokens for inference
 * \param ACancelInferenceKey - key to break out of inference
 * \param AQuestion           - question to ask LLM
 * \returns response from LLM
 **)
function  Dllama_Simple_Inference(const AModelPath, AModelsDb,
  AModelName: PAnsiChar; const AUseGPU: Boolean; const AMaxTokens: UInt32;
  const ACancelInferenceKey: Byte; const AQuestion: PAnsiChar): PAnsiChar;
  cdecl; external DLLAMA_DLL;

(**
 * Check if LLM inference is in progress.
 *
 * \returns TRUE of inference is active, FALSE if not.
 **)
function  Dllama_IsInferenceActive(): Boolean; cdecl; external DLLAMA_DLL;

(**
 * Get size of console window
 *
 * \param AWidth  - returns the width of console window
 * \param AHeight - return height of console window
 **)
procedure Dllama_Console_GetSize(AWidth: PInteger; AHeight: PInteger); cdecl;
  external DLLAMA_DLL;

(**
 * Clear the console window.
 **)
procedure Dllama_Console_Clear(); cdecl; external DLLAMA_DLL;

(**
 * Clear current line of console window.
 *
 * \param AColor - color to clear current console line to
 **)
procedure Dllama_Console_ClearLine(AColor: Word); cdecl; external DLLAMA_DLL;

(**
 * Set title of console window.
 *
 * \param ATitle - string to set console title
 **)
procedure Dllama_Console_SetTitle(const ATitle: PAnsiChar); cdecl;
  external DLLAMA_DLL;

(**
 * Display an optional message and wait in console window and wait for a
 * keypress.
 *
 * \param AForcePause - set TRUE to always pause, FALSE to skip pause if
 *                      running on commandline
 * \param AColor      - color to display message text in
 * \param AMsg        - message to display, if empty, display default message
 **)
procedure Dllama_Console_Pause(const AForcePause: Boolean; AColor: Word;
  const AMsg: PAnsiChar); cdecl; external DLLAMA_DLL;

(**
 * Print a message in console window.
 *
 * \param AText  - print text at current line in console
 * \param AColor - the color to print text in
 **)
procedure Dllama_Console_Print(const AText: PAnsiChar; const AColor: Word);
  cdecl; external DLLAMA_DLL;

(**
 * Print a message in console window with linefeed.
 *
 * \param AText  - print text at current line in console
 * \param AColor - the color to print text in
 **)
procedure Dllama_Console_PrintLn(const AText: PAnsiChar; const AColor: Word);
  cdecl; external DLLAMA_DLL;

(**
 * Set the right margin of console window when streaming tokens during LLM
 * inference.
 *
 * \param AMargin - margin value
 **)
procedure Dllama_TokenResponse_SetRightMargin(const AMargin: Integer); cdecl;
  external DLLAMA_DLL;

(**
 * Add a new token to token response buffer.
 *
 * \param AToken return a token response action
 **)
function  Dllama_TokenResponse_AddToken(const AToken: PAnsiChar): Integer;
  cdecl; external DLLAMA_DLL;

(**
 * The current word to print from token response buffer.
 *
 * \returns wrapped text to display when streaming
 **)
function  Dllama_TokenResponse_LastWord(): PAnsiChar; cdecl;
  external DLLAMA_DLL;

(**
 * Check if there are pending text in the token response buffer.
 *
 * \returns TRUE if there is more text to display, FALSE if not.
 **)
function  Dllama_TokenResponse_Finalize(): Boolean; cdecl; external DLLAMA_DLL;


implementation

{$IF CompilerVersion < 34.0} // Delphi 12 corresponds to version 34.0
uses
  System.Math;
{$IFEND}

initialization
begin
  {$IF CompilerVersion < 34.0} // Delphi 12 corresponds to version 34.0
  // disable floating point exceptions
  SetExceptionMask([exInvalidOp, exDenormalized, exZeroDivide, exOverflow, exUnderflow, exPrecision]);
  {$IFEND}

  ReportMemoryLeaksOnShutdown := True;
end;

finalization
begin
end;

end.
